# a-minimalist-task-tracker

./: .gitignore  README.md  main.py  pyproject.toml  task-cli.bat  tasks.json
src/task_cli/: main.py
