[project]
name = "task-cli"
version = "1.0.0"
description = "A CLI-based task tracker that stores tasks in a JSON file with various commands."
requires-python = ">=3.12"

[project.scripts]
task-cli = "task_cli.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"